--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,11 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+
+  <script>
+    if (window.location.protocol == 'file:') {
+      alert('This game must be run on a web server, like GitHub Pages.');
+    }
+  </script>
 </body>
 </html>
